--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -47,6 +47,28 @@ code {
   text-transform: none;
 }
 
+.basket__title {
+  font-size: 31px;
+  background-color: yellow;
+  padding: 2px 3px;
+  text-align: center;
+}
+.basket__center {
+  margin-top: 30px;
+  .basket__card {
+    display: flex;
+    margin: 5px 0;
+    .basket__img {
+    }
+  }
+}
+.sending {
+  display: flex;
+  .sending__title {
+    margin-right: 10px;
+  }
+}
+
 .basket {
   color: #ffffff;
   padding: 1px 13px;
